--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,16 @@ div.container {
   text-align: center;
   padding: 10px 20px;
 }
+
+.btn-cv {
+  background-color: #5dbcd2;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.btn-cv:hover {
+  background-color: #5dbce2;
+}
