--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,9 @@ div.container {
 .btn-cv:hover {
   background-color: #5dbce2;
 }
+
+.fa-tiktok {
+  color: #111111;
+  
+  filter: drop-shadow(2px 0px 0px #FD3E3E) drop-shadow(-2px -2px 0px #4DE8F4);
+}
