--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ div.container {
 }
 
 .fa-tiktok {
-  color: #111111;
+  color: #ffffff;
   
   filter: drop-shadow(2px 0px 0px #FD3E3E) drop-shadow(-2px -2px 0px #4DE8F4);
 }
